I have added a favico, simple task clipboard with one check in it, I added styling to the task title, so it is  a little bigger as well as centered the tyext completley, and added some simple styles to he textAreas for the edit mode of a task. I added a clearEditing function in the taskDetails component, so that i can call it and clear the edit state values, after saving, preventing other tasks from being saved with the old values, if the data isnt changed. andded a unique key to the taskDetailsreturn from the .map call to remove the warning that their isnt one, allocated the value of the task id to it, Added a div around the Data components dateelement and h2 element, so I can add styling, to have them horizontally aligned, as well as changed the color of the date so it doesnt stand out as much. also added a unique key to the completedTask component section element, for the same reason as before

--- a/src/index.css
+++ b/src/index.css
@@ -113,22 +113,24 @@ main {
     margin: 1% 0 1% 3%;
     display: flex;
     align-items: center;
+    justify-content: center;
     border-radius: 5px;
     width: 20%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
     padding: 0 1% 0 1%;
-    max-height: 125px;
-}
-
-.task > header > h2 {
-    margin: 0;
-    padding: 0;
+    max-height: 150px;
 }
 
 .task-title {
+    margin: 0;
+    padding: 0;
     display: flex;
-    flex-grow: 1;
     color: var(--accent);
+    max-height: 100%;
+    overflow: auto;
+    white-space: normal;  /* Allow wrapping */
+    word-wrap: break-word; /* Break long words */
+    overflow-wrap: anywhere; /* Newer, better support for breaking */
 }
 
 .data-container {
@@ -136,18 +138,42 @@ main {
     width: 100%;
 }
 
-.data-container > .date {
-    color: var(--tertiary);
-    font-weight: bold;
+.data-container > .data-header > .date {
+    color: var(--accent);
 }
 
-.data-container > h3 {
+.data-container > .data-header > h2 {
     color: var(--tertiary);
+    margin-right: 5%;
+}
+
+.data-container > .data-header {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
 }
 
 .data-container > p {
     line-height: 1.6;
 }
+
+.data-container > textarea, .task-header > textarea {
+    width: 100%;
+    font: inherit;
+    line-height: 1.6;
+    resize: none;
+    height: 60%;
+    border-radius: 8px;
+    outline: none;
+    border: 1px solid var(--accent);
+    color: inherit;
+
+}
+
+.data-container > textarea:focus, .task-header > textarea:focus {
+    box-shadow: 0 0 0 3px var(--tertiary);
+}
+
 
 .profile {
     border: 1px solid var(--tertiary);
